--- a/apps/vite-react/package.json
+++ b/apps/vite-react/package.json
@@ -36,9 +36,12 @@
     "@vitejs/plugin-react-swc": "^3.2.0",
     "@vitest/coverage-c8": "^0.28.5",
     "@vitest/ui": "^0.28.5",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.34.0",
     "eslint-config-custom": "*",
     "jsdom": "^21.1.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "tsconfig": "*",
     "typescript": "^4.9.5",
     "vite": "^4.1.0",
