--- a/apps/vite-react/tsconfig.json
+++ b/apps/vite-react/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "tsconfig/vite.json",
+  "compilerOptions": {
+    "paths": {
+      "@@/*": ["./src/components/*"],
+      "@/*": ["./src/*"],
+      "#root/*": ["."]
+    }
+  },
   "include": ["**/*.ts", "**/*.tsx", "./custom.d.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
